--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=8080
 HOST=localhost
 TMDB_KEY=03e630e9ffaffb503baa0999a69156d1
+mongoDB=mongodb://localhost:27017/movies_db
