--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PORT=8080
 HOST=localhost
 TMDB_KEY=03e630e9ffaffb503baa0999a69156d1
 mongoDB=mongodb://localhost:27017/movies_db
+MONGO_DB=mongodb://localhost:27017/movies_db
+SEED_DB=true
