--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ TMDB_KEY=03e630e9ffaffb503baa0999a69156d1
 mongoDB=mongodb://localhost:27017/movies_db
 MONGO_DB=mongodb://localhost:27017/movies_db
 SEED_DB=true
+SECRET=ilikecake
